--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>JAMES EAST</h1>
+<p>james east</p>
+<p>james east</p>
+<p>james east</p>
 </body>
 </html>
